--- a/public/assets/css/wt.css
+++ b/public/assets/css/wt.css
@@ -51,6 +51,13 @@ a {
     margin: 0;
     padding: 0;
 }
+.wt-data-input-item {
+    margin: 0;
+    padding: 0;
+    outline-style: solid;
+    outline-width: 0.5mm;
+    outline-color: var(--primary-color);
+}
 
 /* .wt-grid-container>* {
     padding-left: 30px;
@@ -453,6 +460,24 @@ a {
     border-radius: var(--border-radius);
 }
 
+.wt-patient-input {
+    border-radius: var(--border-radius);
+    background-color: var(--surface);
+    outline-style: solid;
+    outline-width: 0.5mm;
+    outline-color: var(--primary-color);
+}
+.wt-patient-nonmandatory {
+    background-color: #F5F5F8;
+}
+
+.wt-card-outline {
+    border-radius: var(--border-radius);
+    outline-style: solid;
+    outline-width: 0.5mm;
+    outline-color: var(--primary-color);
+}
+
 .wt-card-narrower {
     margin-top: 1.25rem;
     display: flex;
@@ -490,7 +515,7 @@ a {
 }
 
 .wt-notif-content-bot {
-    border-radius: 0px 0px 7px 7px;
+    border-radius: 0px 0px 7px 7px; 
     padding: 8px;
     outline-style: solid;
     outline-width: 0.5mm;
@@ -590,6 +615,10 @@ a {
     padding: 30px;
 }
 
+.wt-margin-large-top {
+    margin-top: 5%;
+}
+
 .wt-fullwidth {
     width: 100%;
 }
@@ -652,6 +681,10 @@ a {
 
 .wt-color-grey {
     color: #848484;
+}
+
+.wt-color-red {
+    color: #C10000;
 }
 
 .wt-bg-white {
