--- a/views/partials/patient_sidebar.hbs
+++ b/views/partials/patient_sidebar.hbs
@@ -2,30 +2,33 @@
     <div class="panel-sidebar">
         <div class="panel-sidebar-logo">
             <br />
-            <img class="wt-border-rounded" src="./assets/img/patient_img.png" width="60px" alt="">
-            <h3 class="wt-color-white">Jape Cooper</h3>
+            <img class="wt-border-circle" src="./assets/img/patient_img.png" width="60px" alt="">
+            <h3 class="wt-color-white">Pat</h3>
+            <a href="/patient_settings">
+                <h6 class="wt-color-white "><u>manage account</u></h6>
+            </a>
         </div>
         <ul class="panel-sidebar-menu">
             <li>
-                <a href="./patient_home">
-                    <span class="menu-icon"><i class="material-icons">add</i></span>
+                <a href="/patient_home">
+                    <span class="menu-icon"><i class="material-icons">favorite</i></span>
                     <span class="menu-title">Homepage</span>
                 </a>
             </li>
             <li>
-                <a href="./patient_records">
-                    <span class="menu-icon"><i class="material-icons">add</i></span>
+                <a href="/patient_records">
+                    <span class="menu-icon"><i class="material-icons">history</i></span>
                     <span class="menu-title">My Records</span>
                 </a>
             </li>
             <li>
-                <a href="./patient_leaderboard">
-                    <span class="menu-icon"><i class="material-icons">add</i></span>
+                <a href="/patient_leaderboard">
+                    <span class="menu-icon"><i class="material-icons">leaderboard</i></span>
                     <span class="menu-title">Leaderboard</span>
                 </a>
             </li>
             <li>
-                <a href="./login">
+                <a href="/login">
                     <span class="menu-icon"><i class="material-icons">logout</i></span>
                     <span class="menu-title">Logout</span>
                 </a>
