--- a/public/assets/css/wt.css
+++ b/public/assets/css/wt.css
@@ -469,6 +469,10 @@ a {
 }
 .wt-patient-nonmandatory {
     background-color: #F5F5F8;
+    border-radius: var(--border-radius);
+    outline-style: solid;
+    outline-width: 0.5mm;
+    outline-color: #c0d3de;
 }
 
 .wt-card-outline {
@@ -880,6 +884,10 @@ ul {
     padding-left: 5px;
     text-align: left;
     padding-right: 10px;
+}
+
+.patient-icon {
+    padding-top: 10px;
 }
 
 .menu-title {
