--- a/views/patient_home.hbs
+++ b/views/patient_home.hbs
@@ -101,33 +101,50 @@
     {{!NEED TO CREATE PULL AND PUSH TO DATABASE, PULL->CHECK IF HAVE->CHECK IF NEED}}
     {{!CURRENT POST DOES NOT WORK PROPERLY, NEED TO REROUTE}}
     {{!<div id="addPatientModal" class="wt-modal">}}
-    <form action="/dashboard/insert" method="POST">
-        <div class="wt-grid-container">
-            <div class="wt-card-item size-12@p size-12@t">
-                <label>Blood Glucose Level (Mmol/L)</label>
-                    <input class="wt-patient-input" name="glucoseLevel" type="text" />
-            </div>
-            <div class="wt-grid-item size-12@p size-12@t">
-                <label>Weight</label>
-                <input class="wt-patient-input" name="weight" type="text" />
-            </div>
-            <div class="wt-grid-item size-12@p size-12@t">
-                <label>Insulin Doses</label>
-                <input class="wt-patient-input" name="insulinDoses" type="text" />
-            </div>
-            <div class="wt-grid-item size-12@p size-12@t">
-                <label>Exercise (Step Count)</label>
-                <input class="wt-patient-input" name="exercise" type="text" />
-            </div>
-            <div class="wt-grid-item size-12@p">
-                <div class="wt-text-align-right">
-                    <button type="submit" class="wt-btn wt-btn-secondary">SAVE</button>
+        
+        <form action="/dashboard/insert" method="POST">
+            <div class="wt-grid-container">
+                <div class="wt-grid-item wt-color-grey size-12@p size-12@t">
+                    <label>Blood Glucose Level (Mmol/L)</label>
+                        <input class="wt-patient-nonmandatory" name="glucoseLevel" type="text" />
+                </div>
+                <div class="wt-grid-item size-12@p size-12@t">
+                    <label>Weight</label>
+                    <input class="wt-patient-input" name="weight" type="text" />
+                </div>
+                <div class="wt-grid-item size-12@p size-12@t">
+                    <label>Insulin Doses</label>
+                    <input class="wt-patient-input" name="insulinDoses" type="text" />
+                </div>
+                <div class="wt-grid-item size-12@p size-12@t">
+                    <label>Exercise (Step Count)</label>
+                    <input class="wt-patient-input" name="exercise" type="text" />
+                </div>
+                {{!Completed Legend, need to fix icon padding}}
+                <span class="patient-icon size-1@p size-1@t"><i class="material-icons wt-color-secondary">check</i></span>
+                <div class="wt-grid-item size-7@p size-9@t wt-color-grey wt-text-align-left">
+                    <p>Completed</p>
+                </div>
+                {{!Missing Legend, need to fix icon padding}}
+                <span class="patient-icon size-1@p size-1@t"><i class="material-icons wt-color-red">warning</i></span>
+                <div class="wt-grid-item size-3@p size-1@t wt-color-grey wt-text-align-left">
+                    <p>Missing</p>
+                </div>
+
+                {{!Save button}}
+                <div class="wt-grid-item size-12@p">
+                    <div class="wt-text-align-right">
+                        <button type="submit" class="wt-btn wt-btn-secondary">SAVE</button>
+                    </div>
+                </div>
+                <div class="wt-grid-item size-12@p">
                 </div>
             </div>
-            <div class="wt-grid-item size-12@p">
-            </div>
-        </div>
-    </form>
+        </form>
     {{!</div>}}
+
+        <div class="wt-grid-container"> 
+
+        </div>
     </div>
 </div>
