psuedo code for input data logic

--- a/public/assets/css/wt.css
+++ b/public/assets/css/wt.css
@@ -300,6 +300,12 @@ a {
     text-align: center;
 }
 
+.wt-icon-align-center {
+    padding-top: 45px;
+    padding-left: 0px;
+    text-align: center;
+}
+
 .wt-text-align-right {
     text-align: right;
 }
